# vnx-orchestration

./: .geminiignore  .gitignore  .vnx-project-id  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  FEATURE_PLAN.md  GREETING.md  Makefile  PRE_PUBLISH_SECURITY_SWEEP_1.0.0.md  PR_QUEUE.md  README.md  ROADMAP.md  ROADMAP.yaml  SECURITY.md  VNX_LAUNCH_REVIEW_MARKETING_TEAM.md  VNX_LAUNCH_TODO.md  blog1-og-image.html  blog2-og-image.html  blog3-og-image.html  blog4-og-image.html  blog5-og-image.html  claude-temp-translation.md  install-central.sh  install-remote.sh  install.sh  probe_result.md  pyproject.toml  requirements.txt  vnx.env.example
.claude/: settings.json
.github/workflows/: anchor-immutability-check.yml  attestation-gate.yml  burn-in-headless.yml  public-ci.yml  subsystems-drift.yml  vnx-ci.yml
.vnx/: governance_enforcement.yaml  governance_profiles.yaml  vnx_workers.default.yaml  worker_permissions.yaml
.vnx-data/state/: PROJECT_STATE_DESIGN.md
.vnx-data/strategy/: KICKOFF.md  ROADMAP.md  backlog.yaml  roadmap.yaml
.vnx/vnx_workers.examples/: provider_mix.yaml  single_worker.yaml  six_worker_pool.yaml
agents/backend-developer/: CLAUDE.md  config.yaml
agents/blog-writer/: CLAUDE.md  config.yaml
agents/code-reviewer/: CLAUDE.md  config.yaml
agents/frontend-developer/: CLAUDE.md  config.yaml
agents/linkedin-writer/: CLAUDE.md  config.yaml
agents/orchestrator/: CLAUDE.md
agents/quality-engineer/: CLAUDE.md  config.yaml
agents/research-analyst/: CLAUDE.md  config.yaml
agents/security-engineer/: CLAUDE.md  config.yaml
agents/system-architect/: CLAUDE.md  config.yaml
claudedocs/: 2026-05-01-deferred-pr-audit.md  SKILL-FRONTMATTER-AUDIT-2026-05-29.md  burn-in-monitoring-runbook-2026-05-12.md  oi1370-systemic-locking-refactor-plan-2026-05-13.md  vnx_intelligence_blog_reference.md
claudedocs/business-domain/: marketing-lead-BEHAVIOR-draft.md
configs/: context_rotation.yaml
dashboard/: PRD.md  README.md  TTD.md  api_agent_stream.py  api_config.py  api_governance.py  api_health.py  api_intelligence.py  api_intelligence_reporting.py  api_observability.py  api_operator.py  api_planning.py  api_recommendations.py  api_register_stream.py  api_subsystems.py  api_token_stats.py  index.html  launch-dashboard.sh  serve_dashboard.py
docs/: AGENT_OS_LIFT_IN_CONTRACT.md  BUSINESS_LIGHT_GOVERNANCE_CONTRACT.md  CHAIN_RESIDUAL_GOVERNANCE.md  CONTEXT_INJECTION_CONTRACT.md  CONTEXT_ROTATION.md  DASHBOARD_KANBAN_CONTRACT.md  DISPATCH_GUIDE.md  DOCS_INDEX.md  EXIT_CODES.md  F35_E2E_CERTIFICATION_REPORT.md  HEADLESS_RUN_CONTRACT.md  HEADLESS_SESSION_CONTRACT.md  MIGRATION_GUIDE.md  MULTI_FEATURE_CHAIN_CONTRACT.md  OI_AUTO_CLOSE_SPEC.md  OPEN_ITEMS_GATE_TOGGLE_CONTRACT.md  PREFERENCES_LESSONS_CONTRACT.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  REGULATED_STRICT_GOVERNANCE_CONTRACT.md  RUNTIME_ADAPTER_CONTRACT.md  SCRIPTS_INDEX.md  SUBPROCESS_ADAPTER_FEATURE_FLAG.md  TERMINAL_STARTUP_SESSION_CONTROL_CONTRACT.md  adoption_certification_report.md  audience_and_use_cases.md  project-root-resolution.md  runtime_core_rollback.md
hooks/: sessionstart.sh  vnx_context_monitor.sh  vnx_hook_payload_logger.sh  vnx_rotate.sh
internal/: SafePAWxVNX.md
plans/: AUTONOMOUS_EXECUTION_PLAN.md
quality_reports/: QUALITY_VALIDATION_2026-02-19.md  QUALITY_VALIDATION_2026-02-25.md
schemas/: quality_intelligence.sql  runtime_coordination.sql  runtime_coordination_v10.sql  runtime_coordination_v2.sql  runtime_coordination_v3.sql  runtime_coordination_v4.sql  runtime_coordination_v5.sql  runtime_coordination_v6.sql  runtime_coordination_v7.sql  runtime_coordination_v8.sql  runtime_coordination_v9.sql
scripts/: append_receipt.py  apply_migration.py  apply_schema_prep.py  apply_suggested_edits.py  attribute_rework.py  audit_chain.py  backfill_dispatch_ids.py  backfill_dispatch_metadata.py  backfill_dispatch_track_linkage.py  backfill_headless_receipts.py  backfill_pr_merged_receipts.py  backfill_track_dispatch_linkage.py  backfill_wt_receipts.py  benchmark_all_models.sh  benchmark_coding_v2_run.sh  benchmark_full_run.sh  benchmark_marketing_full.sh  benchmark_retest_qwen35.sh  build_current_state.py  build_decisions_digest.py  build_doc_indexes.py  build_feature_plan.py  build_pr_queue.py  build_project_status.py  build_strategy_projection.py  build_t0_quality_digest.py  build_t0_state.py  cached_intelligence.py  chain_branch_protection_check.py  chain_epoch_seal.py  chain_f59.sh  chain_project_root.sh  chain_project_root_v2.sh  check_active_drain.py  check_adr_003_no_sdk_imports.py  check_ci_slug_match.py  check_env_isolation.sh  check_installer_no_template_leak.sh  check_intelligence_health.py  check_no_file_derived_data_paths.py  (+180 more)
skills/: skills.yaml
templates/: DOMAIN_FEATURE_PLAN_TEMPLATE.md  FEATURE_PLAN_TEMPLATE.md  settings_vnx_keys.json.tmpl  worker_permissions.yaml.tmpl
tests/: conftest.py  test_acceptance_idempotency.py  test_active_dispatch_janitor.py  test_active_drain.py  test_adapter_conformance.py  test_adr007_composite_keys.py  test_adr007_dispatches_repair.py  test_adr007_structural_conformance.py  test_adr_003_no_sdk_imports.py  test_adr_indexer.py  test_adr_injection.py  test_adrs_fts.py  test_adrs_schema.py  test_agent_dispatch.py  test_agent_os_certification.py  test_agent_resolver.py  test_agent_stream_archive.py  test_agent_stream_sse.py  test_aggregator_build_central_view.py  test_aggregator_schema_drift.py  test_anchor_immutability_workflow.py  test_api_config.py  test_api_intelligence.py  test_api_intelligence_effectiveness_probe.py  test_api_operator_dedup.py  test_api_register_stream.py  test_append_receipt.py  test_append_receipt_dual_write.py  test_append_receipt_identity.py  test_append_receipt_observability.py  test_append_receipt_register_emit.py  test_append_receipt_stderr.py  test_apply_0022_self_heal_fixes.py  test_arc5_operator_cli.py  test_atomic_io.py  test_attest_d2.py  test_attest_override.py  test_attestation.py  test_audit_bundle.py  test_audit_bundle_dispatch_id.py  (+825 more)
vnx_cli/: __init__.py  _engine.py  _reexec.py  main.py
(+1319 files in other folders)
