[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vnx-orchestration"
dynamic = ["version"]
description = "Governance-first runtime for AI agents (NDJSON receipts, SPC-grade quality gates)"
readme = "README.md"
keywords = ["ai-agents", "orchestration", "governance", "llm", "multi-agent", "audit-trail", "ndjson", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [{name = "Vincent van Deth", email = "advies@vincentvandeth.nl"}]
dependencies = [
    "watchdog>=4.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "jsonschema>=4.20",   # governed report schema validation (governance_emit → unified_report_schema)
    "psutil>=5.9",        # runtime supervision + intelligence daemon monitoring
]

# Full quality advisory/local-CI audit tools.
# Install via `pip install vnx-orchestration[quality]`.
[project.optional-dependencies]
quality = ["vulture>=2.10", "ruff>=0.6"]

# Opt-in aggregator dashboard (scripts/aggregator/aggregator_dashboard.py).
# Install via `pip install vnx-orchestration[dashboard]`.
dashboard = ["fastapi>=0.110", "uvicorn>=0.27"]

# Smart Lanes — modular provider submodules for local/cost-zero inference.
# Install individual lanes: pip install vnx-orchestration[local-gemma]
# Install full Smart Lanes stack: pip install vnx-orchestration[smart-lanes]
local-gemma = [
    "mlx-lm>=0.20",  # Apple Silicon optimized LLM runtime
]
provider-lanes = []    # internal subset; wrappers for codex/kimi/gemini/deepseek
smart-router = []      # task classifier + cost-aware routing
smart-lanes = ["vnx-orchestration[local-gemma]"]  # full Smart Lanes stack

[project.scripts]
vnx = "vnx_cli.main:main"

[project.urls]
Homepage = "https://github.com/Vinix24/vnx-orchestration"
Repository = "https://github.com/Vinix24/vnx-orchestration"

# Explicit package list, no autodiscovery. Two distributions ship:
#   - vnx_cli            the importable console-script package (entry point)
#   - vnx_orchestration  a PEP 420 namespace package whose source dir is the
#                        repo root, used purely to carry the engine trees
#                        (scripts/, schemas/, ...) as package data.
# The engine is loaded by path injection (sys.path.insert on scripts/lib), not
# imported as vnx_orchestration.scripts.*, so no granular subpackages are needed.
# This keeps top_level.txt = {vnx_cli, vnx_orchestration} — no bare scripts/
# schemas/configs/hooks/templates squatting the PyPI namespace — while the
# dev-checkout layout stays byte-for-byte unchanged (no files moved).
[tool.setuptools]
packages = ["vnx_cli", "vnx_cli.commands", "vnx_orchestration"]
include-package-data = false

# Map the vnx_orchestration namespace package onto the repo root so its
# package-data globs resolve relative to the engine trees and install under
# <site-packages>/vnx_orchestration/. vnx_cli has no entry and falls back to the
# default root, so it still resolves at ./vnx_cli.
[tool.setuptools.package-dir]
"vnx_orchestration" = "."

# Single source of truth for the version: the root VERSION file.
# pyproject derives from it -> wheel metadata derives from pyproject ->
# vnx_cli.__version__ reads it back via importlib.metadata. No drift.
[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

# Recursive globs ship every asset (sql, sh, json, yaml, md, extensionless git
# hooks, ...) under each engine tree. Paths are relative to the vnx_orchestration
# source dir (the repo root), so e.g. scripts/lib/vnx_paths.py installs as
# vnx_orchestration/scripts/lib/vnx_paths.py and schemas/migrations/*.sql and the
# hyphenated skills/* dirs are carried verbatim.
[tool.setuptools.package-data]
vnx_orchestration = [
    "scripts/**/*",
    "schemas/**/*",
    "skills/**/*",
    "templates/**/*",
    "configs/**/*",
    "hooks/**/*",
    "examples/**/*",
]

# Exclude build artifacts, caches, and non-runtime content from the wheel.
[tool.setuptools.exclude-package-data]
vnx_orchestration = [
    "**/__pycache__/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    # Benchmark suite is dev/research tooling, not runtime: the harness is
    # generalised into a shippable feature in 1.1 (OI-225). Until then it stays
    # in the repo only — shipping it bundles repo-specific task seeds, a binary
    # fixture (scan_quota.db), and a planted-flaw fixture string in skill_smoke
    # that trips downstream secret scanners on install.
    "scripts/benchmark/**",
    "scripts/benchmarks/**",
    "scripts/llm_benchmark.py",
    "**/*.log",
    "tests/**",
    "dist/**",
    "build/**",
    "**/*.egg-info/**",
    ".vnx-data/**",
    "schemas/prep_migrations/**",
    "scripts/*_prep*",
]
